Arun: Fixed candidate profile/interviews padding and top spacing

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -299,10 +299,6 @@ textarea {
   bottom: 8%;
 }
 
-#panelistSignup .has-tabs-top {
-  top: 44px;
-}
-
 .tab-item {
   text-decoration: none !important;
   max-width: initial;
